
Improvements: 
- Added toggle for the update checker (#260)

Bug Fixes:
- Improved comments in the config (265)

4.3.0:

Features: 
- Added SQL support for storage (#255)

Improvements
- Added a teleport to player option in /teama teleport (#269)
- Improved the output of /teama version to include more information (#296)
- Added placeholder %betterteams_inteam% to identify if a player is in a team (#290) 
- Added consistency on prefixing ally chat and team chat (#268)
- Added some missing Traditional Chinese messages (credit: 花圃中的人偶)

Bug Fixes: 
- Fixed bug with players getting kicked out of teams when running /teama create (#292)
- Fixed case sensitivity issues with player names (#288)
- Fixed bug causing NoSuchMethod error with "@" in commands (#287)
- Fixed bug causing rebuildLookups to not work as expected (#286)
- Fixed bug and documentation with autoPurge (#285)
- Fixed typo in Polish Translations (credit: Duplon)
- Fixed typo in config.yml (credit: SecretAgent002)
- Fixed bug causing Worldgaurd not to enable correctly (#273)
- Fixed bug causing scoreboard teams to not be deleted properly (#289 #274)

4.3.1: 
Bug Fixes:
- Removed unwanted debug output
TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

4.3.2:

Improvements:
- Added placeholder %betterteams_title% (#300)
- Added pie chart to bstats to check storage type (#297)

Bug Fixes: 
- Fixed bug with players leaving the game (#303)

4.3.3:

Bug Fixes: 
- Fixed bug with SQL (#309)
- Fixed bug with ally requests not being removed (#312)

4.3.4:

Bug Fixes: 
- Fixed bug causing offline players to cause the server to lag (#321)
- Fixed bug when there are no teams made (#318)

4.3.5: 

Bug Fixes: 
- Fixed bug where some messages would display with "true" before them

4.3.6: 

Bug Fixes: 
- Fixed internal error when viewing ally requests from teams that were disbanded (#326)

Headings: 
Features: 


Improvements:


Bug Fixes: 
